--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -260,14 +260,14 @@ body {
 		transform: rotate(1turn);
 	}
 }
-.rainbow {
+.rainbow1 {
 	position: relative;
 	z-index: 0;
 	border-radius: 10px;
 	overflow: hidden;
 	padding: 2rem;
 }
-.rainbow::before {
+.rainbow1::before {
     content: '';
     position: absolute;
     z-index: -2;
@@ -279,9 +279,9 @@ body {
     background-size: 50% 50%, 50% 50%;
     background-position: 0 0, 100% 0, 100% 100%, 0 100%;
     background-image: linear-gradient(#14213D, #1f376b, #fff), linear-gradient(#fff, #fff), linear-gradient(#fff, #fca311), linear-gradient(#fff, #fff);
-    animation: rotate 4s linear infinite;
+    animation: rotate 6s linear infinite;
 }
-.rainbow::after {
+.rainbow1::after {
 		content: '';
 		position: absolute;
 		z-index: -1;
@@ -292,6 +292,38 @@ body {
 		background: white;
 		border-radius: 5px;
 	}
+.rainbow2 {
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+    overflow: hidden;
+    padding: 2rem;
+}
+.rainbow2::before {
+    content: '';
+    position: absolute;
+    z-index: -2;
+    left: -50%;
+    top: -50%;
+    width: 200%;
+    height: 200%;
+    background-repeat: no-repeat;
+    background-size: 50% 50%, 50% 50%;
+    background-position: 0 0, 100% 0, 100% 100%, 0 100%;
+    background-image: linear-gradient(#fca311, #fff), linear-gradient(#fff, #fff), linear-gradient(#fff, #1f376b, #14213D), linear-gradient(#fff, #fff);
+    animation: rotate 6s linear infinite;
+}
+.rainbow2::after {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    left: 6px;
+    top: 6px;
+    width: calc(100% - 12px);
+    height: calc(100% - 12px);
+    background: white;
+    border-radius: 5px;
+}
 
 /* Experiences */
 #experiences {
@@ -467,11 +499,32 @@ body {
     font-size: 5rem;
     padding-top : 2rem;
     text-align: center;
+    text-shadow: .2rem .2rem #fff;
+}
+#ReseauxContact, #methodContact, #formContact {
+    color: #fff;
+}
+#methodContact { 
+    margin-top: 1rem;
+}
+.titreSocialMediaContact{
+    font-family: 'Comic Neue';
+    font-size: 1.7rem;
+    margin-top: 1rem;
+    /* margin-left: 8rem; */
 }
 .socialMediaContact { 
     margin: 0 20% 0 20%;
     display: flex;
     justify-content: space-between;
+}
+.methodContact { 
+    margin: 0 20% 0 20%;
+    display: flex;
+    justify-content: space-around;
+}
+.zoneFormulaire {
+    padding : 0 8rem 0 8rem;
 }
 .iconCon{
     width: 50px;
@@ -484,15 +537,44 @@ body {
     border-radius: 50%;
     box-shadow: 5px 5px 10px #a16608, -5px -5px 10px #fca311;
 }
-.iconContact:focus { 
-    animation: shadow .15s ease-in-out;
+.iconContact:hover { 
+    animation: shadow 2.5s infinite linear;
+    background-color: #14213D;
+}
+.iconContact:focus{
+    box-shadow: inset 10px 10px 20px #a16608, inset 5px -5px 10px #fca311;
+
 }
 @keyframes shadow {
     0% {
-        box-shadow: 
-        inset 5px 5px 10px #a16608, inset 5px -5px 10px #fca311;
-    }
-    100% {
         box-shadow: none;
     }
+    100% {
+        box-shadow: 
+        inset 10px 10px 20px #a16608, inset 5px -5px 10px #fca311;
+    }
+}
+.contactForm { 
+    /* color: #14213D; */
+    font-size: 1rem;
+    margin: 0 20% 0 20%;
+    color: #fff;
+}
+.form-control {
+    background-color: #fca311 !important;
+    border-bottom: 2px solid #14213D !important;
+    border-top : none !important;
+    border-left: none !important;
+    border-right: none !important;
+}
+.boutonValider {
+    margin-left: 2rem;
+    background-color: #14213D;
+    color: #fff;
+    border: none;
+}
+.boutonValider:hover {
+    background-color: #fca311;
+    color: #fff;
+    border: 2px solid #14213D;
 }
