--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,7 +22,7 @@
     background: #fca311;
 }
 ::-webkit-scrollbar-track {
-    background: #none;
+    background: none;
     border-radius: 5px;
 }
 ::-webkit-scrollbar-track:hover {
