--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,8 +2,11 @@
     margin: 0;
     padding: 0;
 }
-@import url(//db.onlinewebfonts.com/c/2dd509271764ff079832bac8db2c5ac1?family=Filmotype+Austin);
-@font-face {font-family: "Filmotype Austin"; src: url("//db.onlinewebfonts.com/t/2dd509271764ff079832bac8db2c5ac1.eot"); src: url("//db.onlinewebfonts.com/t/2dd509271764ff079832bac8db2c5ac1.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/2dd509271764ff079832bac8db2c5ac1.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/2dd509271764ff079832bac8db2c5ac1.woff") format("woff"), url("//db.onlinewebfonts.com/t/2dd509271764ff079832bac8db2c5ac1.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/2dd509271764ff079832bac8db2c5ac1.svg#Filmotype Austin") format("svg"); }
+@font-face {
+    font-family: Filmotype Austin;
+    src: url("assets/fonts/Filmotype Austin.otf");
+}
+
 
 ::-webkit-scrollbar {
     width: 0.5rem;
