--- a/assets/css/new.css
+++ b/assets/css/new.css
@@ -121,7 +121,7 @@ body {
         text-transform: uppercase;
         color: #fca311;
         outline: 2px solid #fca311;
-        border-radius: 5%;
+        border-radius: 4rem;
         padding: 1rem 2rem;
     }
     .button-aboutMe:hover { 
