--- a/assets/css/new.css
+++ b/assets/css/new.css
@@ -1,9 +1,9 @@
 @font-face {
-    font-family: "Filmotype Austin";
+    font-family: "Filmotype";
     src: url("/assets/fonts/Filmotype_Austin.ttf");
 }
 @font-face {
-    font-family: "ComicSansMS";
+    font-family: "Comici";
     src: url("/assets/fonts/comici.ttf");
 }
 
@@ -13,7 +13,7 @@
     scroll-behavior: smooth;
 }
 body { 
-    font-family:'Filmotype Austin' ;
+    font-family:'Filmotype' ;
 }
 /* Top Button */
 #topButton {
@@ -75,7 +75,7 @@ body {
 .mm-posteAccueil { 
     color: #14213D;
     font-size: 3.5rem;
-    font-family: 'ComicSansMS';
+    font-family: 'Comici';
 }
 .imgAccueil {
     top: 5em;
@@ -153,7 +153,7 @@ body {
 }
 .mm-textProfil {
     height: 77vh;
-    font-family: 'ComicSansMS';
+    font-family: 'Comici';
     font-size: 1.2rem;
     padding: 6rem;
 }
@@ -232,7 +232,7 @@ body {
     font-size: 4rem;
 }
 .titreLogiciels { 
-    font-family: 'ComicSansMS';
+    font-family: 'Comici';
     font-size : 1.3rem;
 }
 .compLogo {
@@ -587,7 +587,7 @@ body {
     margin-top: 1rem;
 }
 .titreSocialMediaContact{
-    font-family: 'ComicSansMS';
+    font-family: 'Comici';
     font-size: 1.7rem;
     margin-top: 1rem;
 }
