--- a/assets/css/new.css
+++ b/assets/css/new.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Filmotype";
-    src: url("/assets/fonts/Filmotype_Austin.ttf");
+    src: url("/assets/fonts/Filmotype_Austin.otf");
 }
 @font-face {
     font-family: "Comici";
