maj police encore

--- a/assets/css/new.css
+++ b/assets/css/new.css
@@ -4,7 +4,7 @@
 }
 @font-face {
     font-family: "Comici";
-    src: url("/assets/fonts/comici.ttf");
+    src: url("/assets/fonts/ComicNeue.otf");
 }
 
 * {
